Add Show recipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="app_name_ru">Рацион питания</string>
     <string name="title_home">Расписание</string>
     <string name="title_cart">Корзина</string>
-    <string name="title_products">Продукты</string>
+    <string name="title_products">Склад</string>
     <string name="title_profile">Профиль</string>
 
 
